Fix jumping content when scrollbar appears

--- a/style_detail_cards.css
+++ b/style_detail_cards.css
@@ -31,6 +31,7 @@ dialog:focus-visible {
   flex-direction: column;
   align-items: center;
   overflow-y: auto;
+  scrollbar-gutter: stable;
   --scrollbar-color: #49d0b0;
   scrollbar-color: var(--scrollbar-color) transparent;
   scrollbar-width: thin;
